--- a/style/stylle.less
+++ b/style/stylle.less
@@ -32,8 +32,9 @@ html {
 
 }
 #display{
-    font-size: 2.5rem;
-    font-style: italic; 
+    font-size: 2.6rem;
+    font-style:normal; 
+    font-weight: normal;
     width: 208px;
     height: 53px;
     background: transparent;
